--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^8.0",
         "laravel/legacy-factories": "^1.0",
+        "laravel/socialite": "^5.1",
         "laravel/tinker": "^2.0"
     },
     "require-dev": {
